# exilecompass

./: .gitignore  LICENSE  README.md  package.json  vite.config.js
.github/workflows/: release.yml
guides/: README.md  gloves-plus2-projectiles.yaml
messages/: de.json  en.json  es.json  fr.json  ja.json  ko.json  pt-br.json  ru.json  zh-cn.json
project.inlang/: settings.json
src/: app.css  app.html  hooks.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json  widget.json
src-tauri/icons/: icon.icns
src-tauri/overlay-core/: Cargo.toml
src-tauri/overlay-core/src/: lib.rs
src-tauri/overlay-core/src/platform/: mod.rs  stub.rs  windows.rs
src-tauri/src/: lib.rs  main.rs
src/lib/: campaign.ts  campaignProgress.svelte.ts  campaignTimer.svelte.ts  crafting-data.ts  crafting.ts  dataI18n.ts  gameMode.svelte.ts  guides.fallback.json  hotkeys.ts  levelingRoute.svelte.ts  logWatcher.ts  overlay.svelte.ts  persist.ts  pob.ts  poe1CampaignTimer.svelte.ts  poe1LevelingProgress.svelte.ts  poe1Pob.ts  poe1ViewState.svelte.ts  poe2-items.json  theme.svelte.ts  triggers.ts  uiScale.svelte.ts  updater.ts  widgets.ts
src/lib/components/: ActDecoderWidget.svelte  BuildOverview.svelte  CampaignGuide.svelte  ConfirmReset.svelte  CraftingGuide.svelte  (+10 more)
src/routes/: +layout.svelte  +page.svelte
tools/: build-act-decoder-manifest.mjs  build-crafting.mjs  build-poe1-regex-data.mjs  build-poe1-tree.mjs  scaffold-addon.mjs  sync-guides-fallback.mjs
tools/addon-scaffold/: README.md  create-addon.mjs
tools/poe1-tree-source/: tree.ts
(+56 files in other folders)
