[workspace]
members = [".", "overlay-core"]
resolver = "2"

[package]
name = "exilecompass"
version = "0.2.7"
description = "ExileCompass - Path of Exile 2 overlay"
authors = ["juddisjudd"]
edition = "2021"

# The `_lib` suffix avoids a name collision between the lib and bin on Windows.
# See: https://github.com/rust-lang/cargo/issues/8519
[lib]
name = "exilecompass_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
overlay-core = { path = "overlay-core" }
raw-window-handle = "0.6"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

